--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.cloud.sql/postgres-socket-factory -->
+        <dependency>
+            <groupId>com.google.cloud.sql</groupId>
+            <artifactId>postgres-socket-factory</artifactId>
+            <version>1.14.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -116,6 +122,20 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <environmentVariables>
+                        <SERVICE_SERVER_PORT>4000</SERVICE_SERVER_PORT>
+                        <ZIPKIN_URL>http://localhost:8714</ZIPKIN_URL>
+                        <DATABASE_NAME>database</DATABASE_NAME>
+                        <DATABASE_USERNAME>postgres</DATABASE_USERNAME>
+                        <DATABASE_PASSWORD>postgres</DATABASE_PASSWORD>
+                        <SQL_INSTANCE_NAME>instance-name</SQL_INSTANCE_NAME>
+                    </environmentVariables>
                 </configuration>
             </plugin>
         </plugins>
